# potatogame

./: .gitattributes  .gitignore  CMakeLists.txt  CONTROLS_AND_GAMEPLAY.md  INDEX.md  QUICK_SETUP.md  README-mac.md  README.md  TROUBLESHOOTING.md  build-game-mac.sh  build-game.bat  build-game.ps1  build-with-cleanup.bat  debug-build.bat  quick-build.bat  simple-build.bat  vcpkg.json
.claude/: settings.local.json
.cursor/rules/: llm-context.md  project-context.mdc
assets/: ASSETS_BRIEF.md
pointer/pointer/: CODE_PATTERNS.md  GAME_ARCHITECTURE.md  PLAYER_SYSTEM_CONTEXT.md  SYSTEM_DEPENDENCIES.md  TESTING_FRAMEWORK.md
prompts/: 01-inter-waves.md  02-particles.md
src/: Bomb.cpp  Bomb.h  BossEnemy.cpp  BossEnemy.h  Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  ExperienceOrb.cpp  ExperienceOrb.h  Game.cpp  Game.h  Item.cpp  Item.h  Material.cpp  Material.h  Menu.cpp  Menu.h  Particle.cpp  Particle.h  PebblinEnemy.cpp  PebblinEnemy.h  Player.cpp  Player.h  Shop.cpp  Shop.h  SlimeEnemy.cpp  SlimeEnemy.h  Vector2.cpp  Vector2.h  Weapon.cpp  Weapon.h  main.cpp
workshop/: FUN_FEATURES.md  PRACTICE.md  README.md  brotato-feature-parity.md  out-there-ideas.md  workshop1.md
